[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-loader-python"
version = "0.1.0"
description = "SQLite-backed async tool loader for LangChain agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "tool-loader-python contributors"},
]
keywords = [
    "langchain",
    "mcp",
    "model-context-protocol",
    "tools",
    "asyncio",
    "sqlite",
    "llm",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "cryptography>=41.0",
    "mcp>=1.0",
    "langchain-core>=0.2",
    "langchain-mcp-adapters>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
tool-loader = "tool_loader.__main__:main"

[project.urls]
"Source" = "https://github.com/pram11/tool_loader_python"
"Bug Tracker" = "https://github.com/pram11/tool_loader_python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tool_loader*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
